tests/files/lexer_tests/should_fail/062.cmdr
// Illegal character in variable name (ascii 29)
myvar = 29;